--- a/src/examplegame/index.html
+++ b/src/examplegame/index.html
@@ -28,21 +28,20 @@
         Try the latest Firefox, Google Chrome, Safari or Opera.
     </canvas>
 
-    <script src="pxloader/PxLoader.js"></script>
-    <script src="pxloader/PxLoaderImage.js"></script>
-    <script src="pxloader/PxLoaderSound.js"></script>
+    <script src="../nickengine/pxloader/PxLoader.js"></script>
+    <script src="../nickengine/pxloader/PxLoaderImage.js"></script>
+    <script src="../nickengine/pxloader/PxLoaderSound.js"></script>
+
+    <script src="../nickengine/setup/setup.js"></script>
+    <script src="../nickengine/setup/Key.js"></script>
+    <script src="../nickengine/setup/Mouse.js"></script>
+    <script src="../nickengine/utils.js"></script>
+
+    <script src="../nickengine/contentmanager/filmstrip.js"></script>
+    <script src="../nickengine/contentmanager/filmplayer.js"></script>
+    <script src="../nickengine/contentmanager/content.js"></script>
 
     <script src="constants.js"></script>
-    <script src="setup/setup.js"></script>
-    <script src="setup/Key.js"></script>
-    <script src="setup/Mouse.js"></script>
-    <script src="setup/cookies.js"></script>
-    <script src="utils.js"></script>
-
-    <script src="contentmanager/filmstrip.js"></script>
-    <script src="contentmanager/filmplayer.js"></script>
-    <script src="contentmanager/content.js"></script>
-
     <script src="appcontroller.js"></script>
     <script src="app.js"></script>
   </div>
