moved to physics file

--- a/src/platform/index.html
+++ b/src/platform/index.html
@@ -43,6 +43,7 @@
     <script src="../nickengine/contentmanager/content.js"></script>
 
     <script src="character.js"></script>
+    <script src="physics.js"></script>
 
     <script src="constants.js"></script>
     <script src="appcontroller.js"></script>
