--- a/src/nonLibraryTools/mapDrawer.html
+++ b/src/nonLibraryTools/mapDrawer.html
@@ -24,9 +24,9 @@
 
 <body>
   <div>
-    <table width="1000">
-        <tr>
-            <td>
+    <table width="1000" id="table">
+        <tr id="tr">
+            <td id="td">
                 <canvas id="myCanvas" width="800" height="600">
                     Your browser does not support the CANVAS element.
                     Try the latest Firefox, Google Chrome, Safari or Opera.
